--- a/style.css
+++ b/style.css
@@ -1,29 +1,18 @@
-#bouton, #boutonreset{
+#gamecenter{
+    width: 80%;
     margin: auto;
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-}
-#bouton:hover, #boutonreset:hover {
-    background-color: rgba(255, 0, 0, 1);
+    display: flex;
+    align-items: center;
 }
 
-#bouton:active,#boutonreset:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+#myCanvas {
+    width: 50%;
+    margin:  auto;
+    top: 50%;
+    position: relative;
 }
-form{
-    display: flex;
-    flex-direction: column;
-}
-.tout{
-    margin-left: auto;
-    margin-right: auto;
+
+#myCanvas .player {
+    position: absolute;
+    bottom: 0;
 }
