--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
     position: absolute;
     bottom: 0;
 }
+.stars {
+    background: url('stars.webp');
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
