ajout du background

--- a/space.css
+++ b/space.css
@@ -15,3 +15,12 @@
     height: 630px;
     margin: auto;
 }
+.stars {
+    background: url('stars.webp');
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
