--- a/spaceDiv/space.css
+++ b/spaceDiv/space.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 500px;
     /* border-style: solid; */
+    z-index: 1;
 
     
 
@@ -14,18 +15,21 @@
     width: 700px;
     height: 630px;
     margin: auto;
+    z-index: 1;
 }
 .stars {
-    background: url('stars.webp');
+    background: url('../img/stars.webp');
     height: 100%;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
+    z-index: 0;
   }
 
   .alien{
     background-image: url("/img/alien.jpg");
+    
   }
 
