--- a/canvas/style.css
+++ b/canvas/style.css
@@ -7,6 +7,7 @@ header{
 img{
     height: 50px;
     width: 50px;
+    cursor: pointer;
 }
 #center{
     display: flex;
@@ -90,4 +91,7 @@ footer{
     font-size: 14px;
     color: rgb(123, 123, 123);
     
+}
+button{
+    cursor: pointer;
 }
