--- a/canvas/style.css
+++ b/canvas/style.css
@@ -5,8 +5,8 @@ header{
 }
 
 img{
-    height: 50px;
-    width: 50px;
+    height: 75px;
+    width: 75px;
     cursor: pointer;
 }
 #center{
@@ -22,12 +22,20 @@ img{
     margin-bottom: 0%;
 }
 #score{
-    margin-top: 25%;
+    margin-top: 20%;
     position: absolute;
     color: white;
     font-size: 45px;
     z-index: 1;
 }
+#score2{
+    margin-top: 30%;
+    position: absolute;
+    color: white;
+    font-size: 45px;
+    z-index: 1;
+}
+
 h1 {
     z-index: 1;
     margin-bottom: 30px;
