--- a/canvas/style.css
+++ b/canvas/style.css
@@ -70,7 +70,7 @@ h1 {
     }
   }
 .stars {
-    background: url('../img/stars.webp');
+    background: url('../img/background.jpg');
     height: 100%;
     width: 100%;
     position: fixed;
