--- a/canvas/style.css
+++ b/canvas/style.css
@@ -126,7 +126,7 @@ h1 {
     z-index: 1;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 70px;
+    margin-top: 15%;
     width: 60%;
 }
 #foot{
