--- a/canvas/style.css
+++ b/canvas/style.css
@@ -33,7 +33,7 @@ img{
                                                 
     margin-top: 15%;
     position: absolute;
-    color: white;
+    color: #ffe436;
     font-size: 30px;
     z-index: 1;
 }
@@ -42,7 +42,7 @@ img{
                                                 
     margin-top: 22%;
     position: absolute;
-    color: white;
+    color: #ffe436;
     font-size: 30px;
     z-index: 1;
 }
@@ -50,9 +50,9 @@ img{
     margin-top: 35%;
     position: absolute;
     z-index: 1;
-    background-color: #8c00ff; /* Green */
+    background-color: rgb(27, 24, 24); /* Green */ 
     border: none;
-    color: white;
+    color: #ffe436;
     padding: 20px 32px;
     text-align: center;
     text-decoration: none;
@@ -70,9 +70,9 @@ img{
     margin-top: 42%;
     position: absolute;
     z-index: 1;
-    background-color: #8c00ff; /* Green */
+    background-color: rgb(27, 24, 24); /* Green */
     border: none;
-    color: white;
+    color: #ffe436;
     padding: 20px 100px;
     text-align: center;
     text-decoration: none;
@@ -87,9 +87,10 @@ img{
     box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 h1 {
+    font-size: 75px;
     z-index: 1;
     margin-bottom: 30px;
-    font-size: 60px;
+    
     margin-right: 20%;
     margin-left: 20%;
     justify-content: space-around;  
