--- a/canvas/style.css
+++ b/canvas/style.css
@@ -1,56 +1,62 @@
 @import url('https://fonts.cdnfonts.com/css/death-star');
 @import url('https://fonts.cdnfonts.com/css/redfive');
-header{
+
+header {
     position: absolute;
     z-index: 1;
     background-color: black;
 }
 
-img{
+img {
     height: 75px;
     width: 75px;
     cursor: pointer;
 }
-#center{
+
+#center {
     display: flex;
     align-items: center;
     z-index: 1;
-    color:white;
+    color: white;
     flex-direction: column;
 }
 
-#center h1{
+#center h1 {
     text-align: center;
 }
 
-#game{
+#game {
     z-index: 1;
     bottom: 0px;
     margin-bottom: 0%;
 }
-#score{
+
+#score {
     font-family: 'RedFive', sans-serif;
-                                                
+
     margin-top: 15%;
     position: absolute;
     color: #ffe436;
     font-size: 30px;
     z-index: 1;
 }
-#score2{
+
+#score2 {
     font-family: 'RedFive', sans-serif;
-                                                
+
     margin-top: 22%;
     position: absolute;
     color: #ffe436;
     font-size: 30px;
     z-index: 1;
 }
-#reset{
+
+#reset {
     margin-top: 35%;
     position: absolute;
     z-index: 1;
-    background-color: rgb(27, 24, 24); /* Green */ 
+    background-color: rgb(27, 24, 24);
+    /* Green */
     border: none;
     color: #ffe436;
     padding: 20px 32px;
@@ -61,16 +67,19 @@ img{
     font-size: 20px;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#reset:hover{
-    box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+#reset:hover {
+    box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
-#replay{
+
+#replay {
     margin-top: 42%;
     position: absolute;
     z-index: 1;
-    background-color: rgb(27, 24, 24); /* Green */
+    background-color: rgb(27, 24, 24);
+    /* Green */
     border: none;
     color: #ffe436;
     padding: 20px 100px;
@@ -81,46 +90,45 @@ img{
     font-size: 20px;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#replay:hover{
-    box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+#replay:hover {
+    box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
+
 h1 {
     font-size: 75px;
     z-index: 1;
     margin-bottom: 30px;
-    
     margin-right: 20%;
     margin-left: 20%;
-    justify-content: space-around;  
+    justify-content: space-around;
     font-family: 'Death Star', sans-serif;
-                                                
     text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #cddc47 0%,
-    #ac80db 29%,
-    #13ff66 67%,
-    #ff00fb 100%
-    );
+    background-image: linear-gradient(-225deg,
+            #cddc47 0%,
+            #ac80db 29%,
+            #13ff66 67%,
+            #ff00fb 100%);
     background-size: auto auto;
     background-clip: border-box;
     background-size: 200% auto;
     color: #fff;
     background-clip: text;
-    
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: textclip 2s linear infinite;
     display: inline-block;
     font-weight: bold;
 }
+
 @keyframes textclip {
     to {
-      background-position: 200% center;
+        background-position: 200% center;
     }
-  }
+}
+
 .stars {
     background: url('../img/background2.jpg');
     height: 100%;
@@ -130,8 +138,9 @@ h1 {
     left: 0;
     bottom: 0;
     z-index: 0;
-  }
-#level{
+}
+
+#level {
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -141,7 +150,8 @@ h1 {
     margin-top: 15%;
     width: 60%;
 }
-#foot{
+
+#foot {
     display: flex;
     right: 0px;
     position: absolute;
@@ -149,20 +159,22 @@ h1 {
     bottom: 0px;
     font-style: Verdana (sans-serif);
 }
-footer{
+
+footer {
     font-size: 14px;
     color: rgb(123, 123, 123);
-    
+
 }
-button{
+
+button {
     cursor: pointer;
     word-wrap: break-word;
     z-index: 2;
-    
-    
+
+
 }
 
-#btn1{
+#btn1 {
     /* background-image: url("./images/space-invaders-vert.webp");
     background-size: 100% 100%;
     background-repeat: no-repeat; */
@@ -171,12 +183,13 @@ button{
     background-color: green;
     border-radius: 10px;
 }
-#btn2{
+
+#btn2 {
     width: 25%;
     height: 130px;
 }
 
-#btn3{
+#btn3 {
     width: 25%;
     height: 130px;
 
@@ -188,30 +201,30 @@ button{
 }
 
 
-#fauxMortDroite{
+#fauxMortDroite {
     display: block;
-    z-index:1;
-    position:absolute;
-    right:-70px;
-    top:-112px;
-    height:250px;
-    width:250px;
+    z-index: 1;
+    position: absolute;
+    right: -70px;
+    top: -112px;
+    height: 250px;
+    width: 250px;
     /* transform: scaleX(-1); */
 }
 
-#fauxMortGauche{
+#fauxMortGauche {
     display: block;
-    z-index:1;
-    position:absolute;
+    z-index: 1;
+    position: absolute;
     right: 20px;
-    top:-112px;
-    height:250px;
-    width:250px;
+    top: -112px;
+    height: 250px;
+    width: 250px;
     transform: scaleX(-1);
 }
 
-#pDifficile{
-    font-family:'Rubik Bubbles', cursive;
+#pDifficile {
+    font-family: 'Rubik Bubbles', cursive;
     font-size: 40px;
     color: red;
     position: relative;
