--- a/canvas/style.css
+++ b/canvas/style.css
@@ -91,7 +91,7 @@ h1 {
     z-index: 1;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 70px;
+    margin-top: 120px;
     width: 60%;
 }
 #foot{
@@ -118,11 +118,21 @@ button{
 }
 
 #btn1{
-    /* background-image: url("./images/space-invaders-vert.webp");
+    background-image: url("./images/baby-yoda-kawai.webp");
     background-size: 100% 100%;
-    background-repeat: no-repeat; */
-    background-color: green;
+    background-repeat: no-repeat; 
+    /* background-color: green; */
     border-radius: 10px;
+}
+
+#btn2{
+
+    background-image: url("./images/mando.webp");
+    background-size: 100% 100%;
+    background-repeat: no-repeat; 
+    /* background-color: green; */
+    border-radius: 10px;
+
 }
 
 #btn3{
@@ -157,10 +167,60 @@ button{
     transform: scaleX(-1);
 }
 
+#pFacile{
+    position: relative;
+    top: 100px;
+    font-size: 40px;
+    color: rgb(240, 11, 202);
+    font-family: 'Pacifico', cursive;
+}
+
 #pDifficile{
     font-family:'Rubik Bubbles', cursive;
     font-size: 40px;
     color: red;
     position: relative;
     top: 110px;
+}
+
+#coeurDroite{
+    position: absolute;
+    left: 0px;
+    top: -70px;
+    transform: rotate(-45deg);
+}
+
+#coeurGauche{
+    position: absolute;
+    left: 120px;
+    top: -70px;
+    transform: rotate(45deg);
+}
+
+#imgNormal{
+    position: absolute;
+    left: 330px;
+    top: 150px;
+    width: 150px;
+    border-radius: 20px;
+    height: 50px;
+
+}
+
+#blaster{
+    position: absolute;
+    left: 310px;
+    top: -95px;
+    width: 150px;
+    height: 100px;
+}
+
+#tirBlaster{
+    height: 5px;
+    width: 25px;
+    background-color: red;
+    position: absolute;
+    left: 470px;
+    top: -58px;
+    border-radius: 10px;
 }
