--- a/canvas/style.css
+++ b/canvas/style.css
@@ -170,6 +170,7 @@ button {
     cursor: pointer;
     word-wrap: break-word;
     z-index: 2;
+    width:210px;
 
 
 }
@@ -178,8 +179,10 @@ button {
     background-image: url("./images/baby-yoda-kawai.webp");
     background-size: 100% 100%;
     background-repeat: no-repeat; 
+
     /* background-color: green; */
     border-radius: 10px;
+    
 }
 
 #btn2{
@@ -226,7 +229,7 @@ button {
 
 #pFacile{
     position: relative;
-    top: 100px;
+    top: 110px;
     font-size: 40px;
     color: rgb(240, 11, 202);
     font-family: 'Pacifico', cursive;
@@ -257,7 +260,7 @@ button {
 #imgNormal{
     position: absolute;
     left: 330px;
-    top: 150px;
+    top: 170px;
     width: 150px;
     border-radius: 20px;
     height: 50px;
