--- a/canvas/style.css
+++ b/canvas/style.css
@@ -47,7 +47,7 @@ img {
     margin-top: 22%;
     position: absolute;
     color: #ffe436;
-    font-size: 30px;
+    font-size: 20px;
     z-index: 1;
 }
 
@@ -64,7 +64,7 @@ img {
     text-decoration: none;
     font-family: 'RedFive', sans-serif;
 
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -82,12 +82,12 @@ img {
     /* Green */
     border: none;
     color: #ffe436;
-    padding: 20px 100px;
+    padding: 20px 83px;
     text-align: center;
     text-decoration: none;
     font-family: 'RedFive', sans-serif;
 
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -98,6 +98,7 @@ img {
 }
 
 h1 {
+    margin-top:0%;
     font-size: 75px;
     z-index: 1;
     margin-bottom: 30px;
@@ -170,7 +171,7 @@ button {
     cursor: pointer;
     word-wrap: break-word;
     z-index: 2;
-    width:210px;
+    
 
 
 }
@@ -179,14 +180,14 @@ button {
     background-image: url("./images/baby-yoda-kawai.webp");
     background-size: 100% 100%;
     background-repeat: no-repeat; 
-
+    width:210px;
     /* background-color: green; */
     border-radius: 10px;
     
 }
 
 #btn2{
-
+    width:210px;
     background-image: url("./images/mando.webp");
     background-size: 100% 100%;
     background-repeat: no-repeat; 
@@ -196,7 +197,7 @@ button {
 }
 
 #btn3{
-
+    width:210px;
     background-image: url(./images/palpatine.webp);
     background-size: 100% 100%;
     border-radius: 10px;
@@ -259,7 +260,7 @@ button {
 
 #imgNormal{
     position: absolute;
-    left: 330px;
+    left: 300px;
     top: 170px;
     width: 150px;
     border-radius: 20px;
